tests/snapshots/lexer_snapshots__lexer_all@tokens-116.snap
---
source: tests/lexer_snapshots.rs
assertion_line: 13
expression: tokens
input_file: examples/spec/08_numeric_conversions/float_narrowing.of
---
Ok(
    [
        Token {
            token_type: Var,
            position: 3,
            line: 1,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "high_precision",
            ),
            position: 18,
            line: 1,
            column: 19,
        },
        Token {
            token_type: Colon,
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: Identifier(
                "f64",
            ),
            position: 23,
            line: 1,
            column: 24,
        },
        Token {
            token_type: Eq,
            position: 25,
            line: 1,
            column: 26,
        },
        Token {
            token_type: Float(
                "123.456",
            ),
            position: 33,
            line: 1,
            column: 34,
        },
        Token {
            token_type: Semicolon,
            position: 34,
            line: 1,
            column: 35,
        },
        Token {
            token_type: Var,
            position: 38,
            line: 2,
            column: 4,
        },
        Token {
            token_type: Identifier(
                "low_precision",
            ),
            position: 52,
            line: 2,
            column: 18,
        },
        Token {
            token_type: Colon,
            position: 53,
            line: 2,
            column: 19,
        },
        Token {
            token_type: Identifier(
                "f32",
            ),
            position: 57,
            line: 2,
            column: 23,
        },
        Token {
            token_type: Eq,
            position: 59,
            line: 2,
            column: 25,
        },
        Token {
            token_type: Identifier(
                "high_precision",
            ),
            position: 74,
            line: 2,
            column: 40,
        },
        Token {
            token_type: As,
            position: 77,
            line: 2,
            column: 43,
        },
        Token {
            token_type: Identifier(
                "f32",
            ),
            position: 81,
            line: 2,
            column: 47,
        },
        Token {
            token_type: Semicolon,
            position: 82,
            line: 2,
            column: 48,
        },
    ],
)
