tests/snapshots/lexer_snapshots__lexer_all@tokens-118.snap
---
source: tests/lexer_snapshots.rs
expression: tokens
input_file: examples/spec/12_control_flow/for_loop.of
---
Ok(
    [
        Token {
            token_type: For,
            position: 3,
            line: 1,
            column: 4,
        },
        Token {
            token_type: LeftParen,
            position: 5,
            line: 1,
            column: 6,
        },
        Token {
            token_type: Identifier(
                "num",
            ),
            position: 8,
            line: 1,
            column: 9,
        },
        Token {
            token_type: In,
            position: 11,
            line: 1,
            column: 12,
        },
        Token {
            token_type: Identifier(
                "numbers",
            ),
            position: 19,
            line: 1,
            column: 20,
        },
        Token {
            token_type: RightParen,
            position: 20,
            line: 1,
            column: 21,
        },
        Token {
            token_type: LeftBrace,
            position: 22,
            line: 1,
            column: 23,
        },
        Token {
            token_type: Identifier(
                "print",
            ),
            position: 30,
            line: 2,
            column: 8,
        },
        Token {
            token_type: LeftParen,
            position: 31,
            line: 2,
            column: 9,
        },
        Token {
            token_type: Identifier(
                "num",
            ),
            position: 34,
            line: 2,
            column: 12,
        },
        Token {
            token_type: RightParen,
            position: 35,
            line: 2,
            column: 13,
        },
        Token {
            token_type: Semicolon,
            position: 36,
            line: 2,
            column: 14,
        },
        Token {
            token_type: RightBrace,
            position: 38,
            line: 3,
            column: 2,
        },
    ],
)
